# glusterfs

./: .mergify.yml  .travis.yml  CONTRIBUTING.md  Makefile.am  configure.ac  glusterfs.spec.in  groups  project.config  rfc.sh
.github/workflows/: on_pr.yml
api/examples/: glfsxmp.c
api/src/: glfs-fops.c  glfs-internal.h  glfs-mgmt.c  glfs-resolve.c  glfs.c
build-aux/: pkg-version
cli/src/: cli-cmd-parser.c  cli-cmd-snapshot.c  cli-cmd-system.c  cli-cmd-volume.c  cli-cmd.c  cli-quotad-client.c  cli-rl.c  cli-rpc-ops.c  cli-xml-output.c  cli.c  cli.h
contrib/fuse-lib/: mount.c
contrib/macfuse/: mount_darwin.c
doc/developer-guide/: coding-standard.md
extras/benchmarking/: glfs-bm.c  rdd.c
extras/create_new_xlator/: new-xlator.c.tmpl
extras/snap_scheduler/: snap_scheduler.py
geo-replication/src/: gsyncd.c  procdiggy.c
glusterfsd/src/: gf_attach.c  glusterfsd-mgmt.c  glusterfsd.c
heal/src/: glfs-heal.c
libglusterfs/src/: async.c  circ-buff.c  client_t.c  cluster-syncop.c  common-utils.c  compat.c  daemon.c  default-args.c  dict.c  event-epoll.c  event-poll.c  event.c  events.c  fd-lk.c  fd.c  gen-defaults.py  gf-dirent.c  globals.c  graph-print.c  graph.c  graph.y  inode.c  iobuf.c  latency.c  libglusterfs.sym  logging.c  mem-pool.c  monitoring.c  quota-common-utils.c  rbthash.c  run.c  statedump.c  store.c  strfd.c  syncop-utils.c  syncop.c  syscall.c  trie.c  xlator.c
tests/: smoke.sh
xlators/features/ds-mds/src/: Makefile.am  dsmds.c  dsmds.h
xlators/features/prjquota/src/: Makefile.am  README.md  prjquota.c  prjquota.h
(+292 files in other folders)
